specify nullability in package `org.openqa.selenium.bidi`